--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+/* removes the scrollbar but keeps the fuctionality*/
+body::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
